[metadata]
name = markdown-writer-atidyshirt
version = 0.1.0
author = Jordan Pyott
author_email = jordanpyott@gmail.com
description = A python module to output to a markdown file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atidyshirt/MarkdownWriter
project_urls =
    Bug Tracker = https://github.com/atidyshirt/MarkdownWriter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
